pkg/kgateway/translator/gateway/testutils/inputs/backendtlspolicy/conflict-resolution.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: example-gateway-class
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - abc.example.com
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: backendtlspolicy-conflicted-without-section-name-test
      port: 443
    matches:
    - path:
        type: Exact
        value: /backendtlspolicy-conflicted-without-section-name
---
apiVersion: v1
kind: Service
metadata:
  name: backendtlspolicy-conflicted-without-section-name-test
spec:
  selector:
    app: tls-backend
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8443
